--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@minimal/material-kit-react",
+  "name": "Quick Bill",
   "author": "minimals.cc",
   "licence": "MIT",
   "version": "2.0.0",
